Updated README file with instructions on how to set up dependencies for the pipeline